attempted to fix appearance on smaller screens

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -89,10 +89,8 @@ footer {
 
 /* Components */
 #app {
-  border: 5px solid #fff;
   border-radius: 10px;
-  max-height: 1000px;
-  width: 500px;
+  max-height: calc(100vh - (150px * 2));
   margin: auto;
 }
 
