--- a/assets/css/sass/components/_app.scss
+++ b/assets/css/sass/components/_app.scss
@@ -1,8 +1,6 @@
 #app {
-    border: 5px solid color(txt);
     border-radius: $rounded;
     max-height: $app-size;
-    width: $app-size * 0.5;
     margin: auto;
 }
 
